<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browser">Browser</string>
    <string name="menu_browser">Browser</string>
    <string name="This_is_browser_fragment">This is browser fragment</string>
    <string name="menu_calculator">Calculator</string>
    <string name="This_is_calculator_fragment">Calculator</string>
    <string name="It_is_calculator_fragment">This is calculator fragment</string>
    <string name="music_box">Music box</string>
    <string name="menu_music">Music</string>
    <string name="угол_XY">Угол XY</string>
    <string name="угол_XZ">Угол XZ</string>
    <string name="угол_ZY">Угол ZY</string>
    <string name="menu_sensors">Stuff</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_stories">Stories</string>
</resources>