<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/browser2_1"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/calc"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/music"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/box"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/stories"
            android:title="@string/menu_stories" />
    </group>
</menu>